add menu on webui

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -2,17 +2,15 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>kushiyaki | {{ title }}</title>
+    <title>ECoMan | {{ title }}</title>
   </head>
   <body>
     <header>
       <h1>{{ title }}</h1>
-      <!--
       <nav>
         <ul>
-          <li><a href="#">Item</a></li>
-          <li><a href="#">Item</a></li>
+          <li><a href="/">VM List</a></li>
+          <li><a href="/create">Create VM</a></li>
         </ul>
       </nav>
-      -->
     </header>
