--- a/templates/detail.html
+++ b/templates/detail.html
@@ -79,7 +79,7 @@
 </tr>
 <tr>
   <td>VM Name</td>
-  <td>{{ detail.get('vim.vm.Summary').config.name }}</td>
+  <td><b>{{ detail.get('vim.vm.Summary').config.name }}</b></td>
 </tr>
 <tr>
   <td>VM Path</td>
