add customized ui on top

--- a/templates/top.html
+++ b/templates/top.html
@@ -1,5 +1,5 @@
 {% include "_header.html" %}
-  <table border=1>
+  <table class="table table-scroll table-striped table-hover">
     <thead>
       <tr>
         <th>Power</th>
