--- a/templates/_header.html
+++ b/templates/_header.html
@@ -3,14 +3,20 @@
   <head>
     <meta charset='utf-8'>
     <title>ECoMan | {{ title }}</title>
+    <link rel="stylesheet" href="/static/spectre.min.css">
   </head>
   <body>
-    <header>
-      <h1>{{ title }}</h1>
-      <nav>
-        <ul>
-          <li><a href="/">VM List</a></li>
-          <li><a href="/create">Create VM</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div class="container" style="max-width: 1200px; margin-top: 20px; margin-bottom: 20px;">
+      <header class="navbar" style="padding-bottom: 1rem; padding-top: 1rem;">
+        <section class="navbar-section">
+          <a href="#" class="navbar-brand mr-2" style="font-weight: bold;">ECoMan</a>
+          <a href="/" class="btn btn-link">VM List</a>
+          <a href="/create" class="btn btn-link">Create VM</a>
+        </section>
+        <section class="navbar-section">
+          <div class="input-group input-inline">
+            <input class="form-input" type="text" placeholder="search">
+            <button class="btn btn-primary input-group-btn">Search</button>
+          </div>
+        </section>
+      </header>
