--- a/templates/create.html
+++ b/templates/create.html
@@ -1,8 +1,19 @@
 {% include "_header.html" %}
 
-<h3>Hardware</h3>
+<h3>Machine Specs</h3>
 
-<form class="form-horizontal">
+<form class="form-horizontal" id="form-container">
+  <b>Spec Guide</b>
+
+  <div class="btn-group btn-group-block">
+    <button type="button" class="btn" id="microButton">Micro Machine</button>
+    <button type="button" class="btn" id="smallButton">Small Machine</button>
+    <button type="button" class="btn" id="mediumButton">Medium Machine</button>
+    <button type="button" class="btn" id="largeButton">Large Machine</button>
+  </div> 
+  
+  <br>
+
   <div class="form-group">
     <div class="col-3 col-sm-12">
       <label class="form-label" for="name">VM Name</label>
@@ -102,11 +113,13 @@
 </div>
 
 <style>
+#form-container {
+  max-width: 600px;
+}
 #msgbox {
   display: none;
   margin-bottom: .4rem;
 }
-
 </style>
 
 <script>
@@ -130,7 +143,15 @@ setMsgbox = (message, is_success) => {
   }
 }
 
+setSpec = (cpu, ram, storage) => {
+  document.getElementById("cpu").value = cpu;
+  document.getElementById("ram").value = ram;
+  document.getElementById("storage").value = storage;
+}
+
 createMachine = () => {
+  setLoading(true);
+
   const url = '/v1/machine';
   const params = ["name", "cpu", "ram", "storage", "network", "esxi_node", "tag", "memo"];
   const payloads = {};
@@ -167,6 +188,22 @@ commitButton.addEventListener("click", createMachine, false);
 let closeButton = document.getElementById('close');
 closeButton.addEventListener("click", () => {
   setMsgbox(false);
+}, false);
+
+document.getElementById('microButton').addEventListener("click", () => {
+  setSpec(1, 512, 30);
+}, false);
+
+document.getElementById('smallButton').addEventListener("click", () => {
+  setSpec(1, 1024, 30);
+}, false);
+
+document.getElementById('mediumButton').addEventListener("click", () => {
+  setSpec(2, 2048, 50);
+}, false);
+
+document.getElementById('largeButton').addEventListener("click", () => {
+  setSpec(4, 4096, 70);
 }, false);
 </script>
 
