--- a/templates/top.html
+++ b/templates/top.html
@@ -10,8 +10,8 @@
         <th>Comment</th>
 	<th>Author</th>
 	<th>User</th>
-	<th>Password</th>
-	<th>Created At</th>
+	<!-- th>Password</th>
+	<th>Created At</th -->
 	<th>Tags</th>
       </tr>
     </thead>
@@ -33,8 +33,8 @@
         <td>{{ machine.guest_os }}</td>
         <td>{{ machine.comment }}</td>
         <td>{{ machine.memo.author | default('') }}</td>
-	<!-- <td>{{ machine.memo.user | default('') }}</td> -->
-	<!-- <td>{{ machine.memo.password| default('') }}</td> -->
+	<!-- <td>{{ machine.memo.user | default('') }}</td>
+	<td>{{ machine.memo.password| default('') }}</td> -->
         <td>{{ machine.memo.created_at | default('') }}</td>
         <td>{{ ', '.join(machine.memo.tag) | default('') }}</td>
       </tr>
