fix column name

--- a/templates/top.html
+++ b/templates/top.html
@@ -9,9 +9,9 @@
         <th>Guest OS</th>
         <th>Comment</th>
 	<th>Author</th>
-	<th>User</th>
-	<!-- th>Password</th>
-	<th>Created At</th -->
+	<!-- th>User</th>
+	<th>Password</th -->
+	<th>Created At</th>
 	<th>Tags</th>
       </tr>
     </thead>
