--- a/templates/_header.html
+++ b/templates/_header.html
@@ -14,9 +14,10 @@
           <a href="/create" class="btn btn-link">Create VM</a>
         </section>
         <section class="navbar-section">
-          <div class="input-group input-inline">
-            <input class="form-input" type="text" placeholder="search">
-            <button class="btn btn-primary input-group-btn">Search</button>
-          </div>
+        {% if email %}
+	  <span>{{ email }} としてログイン中</span>
+	{% else %}
+	  <span>Anonymous としてログイン中</span>
+	{% endif %}
         </section>
       </header>
