--- a/templates/top.html
+++ b/templates/top.html
@@ -7,6 +7,7 @@
         <th>Name</th>
         <th>Datastore</th>
         <th>Guest OS</th>
+	<th>IP Address</th>
         <th>Comment</th>
 	<th>Author</th>
 	<!-- th>User</th>
@@ -31,6 +32,7 @@
         <td><a href="/machine/{{ machine.uniq_id }}">{{ machine.name }}</a></td>
         <td>{{ machine.datastore }}</td>
         <td>{{ machine.guest_os }}</td>
+        <td>{{ machine.ipaddr }}</td>
         <td>{{ machine.comment }}</td>
         <td>{{ machine.memo.author | default('') }}</td>
 	<!-- <td>{{ machine.memo.user | default('') }}</td>
