--- a/templates/create.html
+++ b/templates/create.html
@@ -10,8 +10,8 @@
     <button type="button" class="btn" id="smallButton">Small Machine</button>
     <button type="button" class="btn" id="mediumButton">Medium Machine</button>
     <button type="button" class="btn" id="largeButton">Large Machine</button>
-  </div> 
-  
+  </div>
+
   <br>
 
   <div class="form-group">
@@ -86,7 +86,7 @@
 
   <div class="form-group">
     <div class="col-3 col-sm-12">
-	    <label class="form-label" for="tags">Tags</label>
+      <label class="form-label" for="tags">Tags</label>
     </div>
     <div class="col-9 col-sm-12">
       <input class="form-input" type="text" id="tags" placeholder="koyama, research, experiment">
@@ -98,10 +98,11 @@
       <label class="form-label" for="comment">Memo</label>
     </div>
     <div class="col-9 col-sm-12">
-      <input id="comment" class="form-input" type="text" placeholder="My experimental machine for performance evaluation">
+      <input id="comment" class="form-input" type="text"
+        placeholder="My experimental machine for performance evaluation">
     </div>
   </div>
-  
+
   <div class="toast" id="msgbox">
     <button type="button" id="close" class="btn btn-clear float-right"></button>
     <p id="status"></p>
@@ -110,101 +111,102 @@
   <div class="form-group">
     <button type="button" id="commit" class="btn btn-primary">Create</button>
   </div>
-</div>
+  </div>
 
-<style>
-#form-container {
-  max-width: 600px;
-}
-#msgbox {
-  display: none;
-  margin-bottom: .4rem;
-}
-</style>
-
-<script>
-setLoading = (is_display) => {
-  if (is_display) {
-    document.getElementById("commit").classList.add("loading");
-  } else {
-    document.getElementById("commit").classList.remove("loading");
-  }
-}
-
-setMsgbox = (message, is_success) => {
-  if (message) {
-    document.getElementById("msgbox").style.display = "block";
-    document.getElementById("status").innerHTML = message;
-    document.getElementById('msgbox').classList.remove(is_success ? "toast-error" : "toast-success");
-    document.getElementById('msgbox').classList.add(is_success ? "toast-success" : "toast-error");
-  } else {
-    document.getElementById("msgbox").style.display = "none";
-    document.getElementById("status").innerHTML = "";
-  }
-}
-
-setSpec = (cpu, ram, storage) => {
-  document.getElementById("cpu").value = cpu;
-  document.getElementById("ram").value = ram;
-  document.getElementById("storage").value = storage;
-}
-
-createMachine = () => {
-  setLoading(true);
-
-  const url = '/v1/machine';
-  const params = ["name", "cpu", "ram", "storage", "network", "esxi_node", "tags", "comment"];
-  const payloads = {};
-  params.forEach(param => {
-    payloads[param] = document.getElementById(param).value;
-  })
-  payloads['tags'] = payloads['tags'].split(",").map(item => {
-    return item.trim();
-  });
-  // console.log(payloads);
-
-  fetch(url, {
-    method: 'POST',
-    body: JSON.stringify(payloads), // data can be `string` or {object}!
-    headers:{
-      'Content-Type': 'application/json'
+  <style>
+    #form-container {
+      max-width: 600px;
     }
-  }).then(res => res.json())
-    .then(response => {
-      console.log('Success:', JSON.stringify(response));
-      setMsgbox('Success: ' + response['status'], true);
-      setLoading(false);
-    })
-    .catch(error => {
-      console.error('Error:', error)
-      setMsgbox("Fail: " + error, false);
-      setLoading(false);
-    });
-}
 
-let commitButton = document.getElementById('commit');
-commitButton.addEventListener("click", createMachine, false);
+    #msgbox {
+      display: none;
+      margin-bottom: .4rem;
+    }
+  </style>
 
-let closeButton = document.getElementById('close');
-closeButton.addEventListener("click", () => {
-  setMsgbox(false);
-}, false);
+  <script>
+    setLoading = (is_display) => {
+      if (is_display) {
+        document.getElementById("commit").classList.add("loading");
+      } else {
+        document.getElementById("commit").classList.remove("loading");
+      }
+    }
 
-document.getElementById('microButton').addEventListener("click", () => {
-  setSpec(1, 512, 30);
-}, false);
+    setMsgbox = (message, is_success) => {
+      if (message) {
+        document.getElementById("msgbox").style.display = "block";
+        document.getElementById("status").innerHTML = message;
+        document.getElementById('msgbox').classList.remove(is_success ? "toast-error" : "toast-success");
+        document.getElementById('msgbox').classList.add(is_success ? "toast-success" : "toast-error");
+      } else {
+        document.getElementById("msgbox").style.display = "none";
+        document.getElementById("status").innerHTML = "";
+      }
+    }
 
-document.getElementById('smallButton').addEventListener("click", () => {
-  setSpec(1, 1024, 30);
-}, false);
+    setSpec = (cpu, ram, storage) => {
+      document.getElementById("cpu").value = cpu;
+      document.getElementById("ram").value = ram;
+      document.getElementById("storage").value = storage;
+    }
 
-document.getElementById('mediumButton').addEventListener("click", () => {
-  setSpec(2, 2048, 50);
-}, false);
+    createMachine = () => {
+      setLoading(true);
 
-document.getElementById('largeButton').addEventListener("click", () => {
-  setSpec(4, 4096, 70);
-}, false);
-</script>
+      const url = '/v1/machine';
+      const params = ["name", "cpu", "ram", "storage", "network", "esxi_node", "tags", "comment"];
+      const payloads = {};
+      params.forEach(param => {
+        payloads[param] = document.getElementById(param).value;
+      })
+      payloads['tags'] = payloads['tags'].split(",").map(item => {
+        return item.trim();
+      });
+      // console.log(payloads);
 
-{% include "_footer.html" %}
+      fetch(url, {
+        method: 'POST',
+        body: JSON.stringify(payloads), // data can be `string` or {object}!
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      }).then(res => res.json())
+        .then(response => {
+          console.log('Success:', JSON.stringify(response));
+          setMsgbox('Success: ' + response['status'], true);
+          setLoading(false);
+        })
+        .catch(error => {
+          console.error('Error:', error)
+          setMsgbox("Fail: " + error, false);
+          setLoading(false);
+        });
+    }
+
+    let commitButton = document.getElementById('commit');
+    commitButton.addEventListener("click", createMachine, false);
+
+    let closeButton = document.getElementById('close');
+    closeButton.addEventListener("click", () => {
+      setMsgbox(false);
+    }, false);
+
+    document.getElementById('microButton').addEventListener("click", () => {
+      setSpec(1, 512, 30);
+    }, false);
+
+    document.getElementById('smallButton').addEventListener("click", () => {
+      setSpec(1, 1024, 30);
+    }, false);
+
+    document.getElementById('mediumButton').addEventListener("click", () => {
+      setSpec(2, 2048, 50);
+    }, false);
+
+    document.getElementById('largeButton').addEventListener("click", () => {
+      setSpec(4, 4096, 70);
+    }, false);
+  </script>
+
+  {% include "_footer.html" %}
