--- a/templates/top.html
+++ b/templates/top.html
@@ -23,8 +23,8 @@
         <span class="label label-warning">{{ machine.power | upper() }}</span>
         {% endif %}
       </td>
-      <td>{{ machine.esxi_nodename }}</td>
-      <td>{{ machine.vmid }}</a></td>
+      <td>{{ machine.esxi_node_name }}</td>
+      <td>{{ machine.id }}</a></td>
       <td><a href="/machine/{{ machine.uniq_id }}">{{ machine.name }}</a></td>
       <td>{{ machine.guest_os }}</td>
       <td>{{ machine.ipaddr }}</td>
