--- a/dashboard/templates/top.html
+++ b/dashboard/templates/top.html
@@ -27,7 +27,7 @@
       <td>{{ machine.id }}</a></td>
       <td><a href="/machine/{{ machine.uniq_id }}">{{ machine.name }}</a></td>
       <td>{{ machine.guest_os }}</td>
-      <td>{{ machine.ipaddr }}</td>
+      <td>{{ machine.ip_address }}</td>
       <td>{{ machine.comment }}</td>
     </tr>
     {% endfor %}
