--- a/dashboard/templates/top.html
+++ b/dashboard/templates/top.html
@@ -25,7 +25,7 @@
       </td>
       <td>{{ machine.esxi_node_name }}</td>
       <td>{{ machine.id }}</a></td>
-      <td><a href="/machine/{{ machine.uniq_id }}">{{ machine.name }}</a></td>
+      <td><a href="/machine/{{ machine.esxi_node_name }}/{{ machine.id }}">{{ machine.name }}</a></td>
       <td>{{ machine.guest_os }}</td>
       <td>{{ machine.ip_address }}</td>
       <td>{{ machine.comment }}</td>
